[package]
name = "text-transliterate"
description = "simple utility for transliterate texts using the SO iconv from POSIX"
license = "Apache-2.0/MIT"
repository = "git@github.com:DavidBM/text-transliterate-rust.git"
homepage = "https://github.com/DavidBM/text-transliterate-rust"
version = "0.1.0"
authors = ["David Bonet <webbonet@gmail.com>"]

[dependencies]
libc = "0.2"
errno = "*"
log = "*"
env_logger = "*"
