[package]
name = "text-transliterate"
description = "simple utility for transliterate texts using the SO iconv from POSIX"
license = "Apache-2.0/MIT"
repository = "https://github.com/DavidBM/text-transliterate-rust"
homepage = "https://github.com/DavidBM/text-transliterate-rust"
version = "1.0.0"
authors = ["David Bonet <webbonet@gmail.com>"]
edition = "2018"

[dependencies]
libc = "0.2"
errno = "0.2.4"
log = "0.4.8"
